<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/function_intro_title"
                style="@style/TextViewTitleStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/title1"/>
        <TextView
                android:text="@string/function_intro_content"
                style="@style/TextViewContentStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title1"
                android:id="@+id/content1"/>
        <TextView
                android:text="@string/plugin_usage_intro_title"
                style="@style/TextViewTitleStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content1"
                android:id="@+id/title2"/>
        <TextView
                android:text="@string/plugin_usage_intro_content"
                style="@style/TextViewContentStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title2"
                android:id="@+id/content2"/>

        <TextView
                android:text="@string/xpatch_command_intro_title"
                style="@style/TextViewTitleStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content2"
                android:id="@+id/title3"/>
        <TextView
                android:text="@string/xpatch_command_intro_content"
                style="@style/TextViewContentStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title3"
                android:id="@+id/content3"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
